deployments/infrastructure/traefik/truenas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: technitium
      port: 5380
      targetPort: 5380
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.0.0.104
    ports:
      - name: http
        port: 80
      - name: technitium
        port: 5380
