deployments/infrastructure/traefik/technitium-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure
  hostnames:
    - technitium.local.obleey.com
  rules:
    - backendRefs:
        - name: truenas
          port: 5380
